@@ -35,9 +35,7 @@
 		'@srcdir@/server/exmpp_server_session',
 		'@srcdir@/server/exmpp_server_tls',
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_zlib',
-		@COMPAT_MODULES@'@srcdir@/compat/iconv',
 		@COMPAT_MODULES@'@srcdir@/compat/jlib',
-		@COMPAT_MODULES@'@srcdir@/compat/sha',
 		@COMPAT_MODULES@'@srcdir@/compat/stringprep',
 		@COMPAT_MODULES@'@srcdir@/compat/tls',
 		@COMPAT_MODULES@'@srcdir@/compat/xml',
