@@ -1,84 +1,0 @@
-%%%----------------------------------------------------------------------
-%%% File    : iconv.erl
-%%% Author  : Alexey Shchepin <alexey@sevcom.net>
-%%% Purpose : Interface to libiconv
-%%% Created : 16 Feb 2003 by Alexey Shchepin <alexey@sevcom.net>
-%%% Id      : $Id$
-%%%----------------------------------------------------------------------
-
--module(iconv).
--author('alexey@sevcom.net').
--vsn('$Revision$ ').
-
--behaviour(gen_server).
-
--export([start/0, start_link/0, convert/3]).
-
-%% Internal exports, call-back functions.
--export([init/1,
-	 handle_call/3,
-	 handle_cast/2,
-	 handle_info/2,
-	 code_change/3,
-	 terminate/2]).
-
-
-
-start() ->
-    gen_server:start({local, ?MODULE}, ?MODULE, [], []).
-
-start_link() ->
-    gen_server:start_link({local, ?MODULE}, ?MODULE, [], []).
-
-init([]) ->
-    Dir = case code:priv_dir(exmpp) of
-        {error, _Reason} -> "priv/lib";
-        Priv_Dir         -> Priv_Dir ++ "/lib"
-    end,
-    case erl_ddll:load_driver(Dir, iconv_erl) of
-	ok -> ok;
-	{error, already_loaded} -> ok
-    end,
-    Port = open_port({spawn, iconv_erl}, []),
-    ets:new(iconv_table, [set, public, named_table]),
-    ets:insert(iconv_table, {port, Port}),
-    {ok, Port}.
-
-
-%%% --------------------------------------------------------
-%%% The call-back functions.
-%%% --------------------------------------------------------
-
-handle_call(_, _, State) ->
-    {noreply, State}.
-
-handle_cast(_, State) ->
-    {noreply, State}.
-
-handle_info({'EXIT', _Pid, _Reason}, Port) ->
-    {noreply, Port};
-
-% FIXME This never match because of the previous clause.
-%handle_info({'EXIT', Port, Reason}, Port) ->
-%    {stop, {port_died, Reason}, Port};
-
-handle_info(_, State) ->
-    {noreply, State}.
-
-code_change(_OldVsn, State, _Extra) ->
-    {ok, State}.
-
-terminate(_Reason, Port) ->
-    Port ! {self, close},
-    ok.
-
-
-
-convert(From, To, String) ->
-    [{port, Port} | _] = ets:lookup(iconv_table, port),
-    Bin = term_to_binary({From, To, String}),
-    BRes = port_control(Port, 1, Bin),
-    binary_to_list(BRes).
-
-
-
